# proxychains-rs

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  proxychains.conf
.github/workflows/: ci.yml  release.yml
docs/: forced-proxy-validation.md
libproxychains/: Cargo.toml
libproxychains/src/: lib.rs
proxychains/: Cargo.toml
proxychains-bin/: Cargo.toml
proxychains-bin/src/: main.rs
proxychains-injector/: Cargo.toml
proxychains-injector/src/: injector.rs  lib.rs
proxychains/src/: error.rs  lib.rs
proxychains/src/chain/: manager.rs  mod.rs  selector.rs
proxychains/src/config/: mod.rs  parser.rs  types.rs
proxychains/src/dns/: cache.rs  hosts.rs  mod.rs  resolver.rs
proxychains/src/hook/: hooks.rs  hooks_windows.rs  interpose.rs  interpose_windows.rs  mod.rs  reload.rs
proxychains/src/net/: mod.rs  socket.rs  socket_windows.rs  timeout.rs  timeout_windows.rs
proxychains/src/platform/: mod.rs  unix.rs  windows.rs
proxychains/src/proxy/: http.rs  mod.rs  raw.rs  socks4.rs  socks5.rs
proxychains/tests/: real_backends.rs
