[package]
name = "libproxychains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LD_PRELOAD/DLL injection library for proxychains"

[lib]
name = "proxychains"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
proxychains = { path = "../proxychains" }
once_cell.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true
ctor.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }
minhook = "0.6"
