[package]
name = "proxychains-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for proxychains"

[[bin]]
name = "proxychains4"
path = "src/main.rs"

[dependencies]
proxychains = { path = "../proxychains" }
proxychains-injector = { path = "../proxychains-injector" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
