[package]
name = "proxychains-injector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "DLL injection utilities for proxychains-rs on Windows"

[lib]
name = "proxychains_injector"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security",
] }
windows-core = "0.54"

[target.'cfg(unix)'.dependencies]
# No dependencies needed for Unix stub
